--- a/composer.json
+++ b/composer.json
@@ -22,32 +22,25 @@
         "source": "https://github.com/markocupic/sac-event-registration-reminder"
     },
     "require": {
-        "contao/core-bundle": "^4.9",
+        "php": "^8.1",
+        "contao/core-bundle": "^4.13 || ^5.0",
         "markocupic/sac-event-tool-bundle": "*",
-        "terminal42/notification_center": "*"
+        "terminal42/notification_center": "^1.7 || ^2.0"
     },
     "require-dev": {
-        "contao/easy-coding-standard": "^5.0",
-        "contao/manager-plugin": "^2.3.1",
-        "contao/test-case": "^4.6",
-        "phpunit/phpunit": "^9.3",
-        "symfony/phpunit-bridge": "^5.4"
+        "contao/manager-plugin": "^2.12"
     },
     "autoload": {
         "psr-4": {
             "Markocupic\\SacEventRegistrationReminder\\": "src/"
-        },
-        "classmap": [
-            "src/Resources/contao"
-        ],
-        "exclude-from-classmap": [
-            "src/Resources/contao/config",
-            "src/Resources/contao/dca",
-            "src/Resources/contao/languages",
-            "src/Resources/contao/templates"
-        ]
+        }
     },
     "extra": {
         "contao-manager-plugin": "Markocupic\\SacEventRegistrationReminder\\ContaoManager\\Plugin"
+    },
+    "scripts": {
+        "cs-fixer": "@php tools/ecs/vendor/bin/ecs check config/ contao/ src/ templates/ tests/ --config tools/ecs/config.php --fix --ansi",
+        "phpstan": "@php tools/phpstan/vendor/bin/phpstan analyse src tests",
+        "unit-tests": "@php tools/phpunit/vendor/bin/phpunit -c tools/phpunit/phpunit.xml.dist"
     }
 }
