Add the config.allowed-plugins key

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,12 @@
     "extra": {
         "contao-manager-plugin": "Markocupic\\SacEventRegistrationReminder\\ContaoManager\\Plugin"
     },
+    "config": {
+        "allow-plugins": {
+            "contao-components/installer": false,
+            "contao/manager-plugin": false
+        }
+    },
     "scripts": {
         "cs-fixer": "@php tools/ecs/vendor/bin/ecs check config/ contao/ src/ templates/ tests/ --config tools/ecs/config.php --fix --ansi",
         "phpstan": "@php tools/phpstan/vendor/bin/phpstan analyse src tests",
