--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "config": {
         "allow-plugins": {
             "contao-components/installer": false,
-            "contao/manager-plugin": false
+            "contao/manager-plugin": false,
+            "contao-community-alliance/composer-plugin": true
         }
     },
     "scripts": {
