--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -1,15 +1,5 @@
 {
     "require": {
-        "phpstan/phpstan": "^1.10",
-        "markocupic/swiss-alpine-club-contao-login-client-bundle": "^2.0",
-        "contao/test-case": "^4.13",
-        "contao/comments-bundle": "^4.13"
-    },
-    "config": {
-        "allow-plugins": {
-            "contao-components/installer": false,
-            "contao/manager-plugin": false,
-            "contao-community-alliance/composer-plugin": true
-        }
+        "phpstan/phpstan": "^1.10"
     }
 }
