--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpstan/phpstan": "^1.10",
-        "contao/test-case": "^4.13"
+        "contao/test-case": "^4.13",
+        "markocupic/sac-event-tool-bundle": "dev-master"
     }
 }
