--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     },
     "require": {
         "php": "^8.1",
-        "contao/core-bundle": "^4.13 || ^5.0",
-        "markocupic/sac-event-tool-bundle": "*",
-        "terminal42/notification_center": "^1.7 || ^2.0"
+        "contao/core-bundle": "^5.0",
+        "markocupic/sac-event-tool-bundle": "dev-contao5",
+        "terminal42/notification_center": "^2.0"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.12"
